fix(layout): items correctly aligned

--- a/src/app/assets/scss/styles.scss
+++ b/src/app/assets/scss/styles.scss
@@ -23,6 +23,7 @@
 
 * {
   @apply outline-none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
