--- a/src/app/layouts/components/topbar/topbar.component.scss
+++ b/src/app/layouts/components/topbar/topbar.component.scss
@@ -1,7 +1,7 @@
 .topbar-wrapper {
   @apply bg-white/70 dark:bg-black/70 backdrop-filter backdrop-blur-sm backdrop-saturate-150 p-5;
   @apply sticky top-0;
-  @apply flex h-20;
+  @apply flex items-center h-20;
 
   .sidebar-toggler {
     @apply lg:hidden;
@@ -12,7 +12,7 @@
   }
 
   .right {
-    @apply flex items-center gap-5 ml-auto;
+    @apply flex items-center gap-5 ml-auto h-full;
 
     & > * {
       @apply h-full flex items-center;
